# ensi

./: .gitignore  .readthedocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
docs/: index.md
docs/ensi/substack/: substack_downloader.md
docs/guias/: configuração_ambiente_desenvolvimento_python_linux_wsl.md  guia_configuração_dependências.md  guia_doctests_testes_unitários.md  guia_instalação_configuração_act_wsl.md
ensi/substack/: substack_downloader.py
tests/substack/: test_substack_downloader.py
